<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sos_emergency_red"
    android:contentDescription="@string/countdown_dialog_description">

    <TextView
        android:id="@+id/countdown_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:contentDescription="@string/countdown_title_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/countdown_text"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="3"
        android:textColor="@color/white"
        android:textSize="120sp"
        android:textStyle="bold"
        android:contentDescription="@string/countdown_timer_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown_title"
        app:layout_constraintBottom_toTopOf="@+id/countdown_message"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/countdown_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown_message"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:contentDescription="@string/countdown_message_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown_text"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:text="@string/dialog_cancel"
        android:textColor="@color/sos_emergency_red"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/countdown_cancel_description"
        app:cornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countdown_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>
